--- a/App.config
+++ b/App.config
@@ -1,7 +1,7 @@
 ﻿<configuration>
 	<connectionStrings>
 		<add name="TinyCollegeDB"
-			 connectionString="Data Source=(localdb)\MSSQLLocalDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+			 connectionString="Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TinyCollegeDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
